# silverhand_ws_gateway

./: LICENSE  README.md  package.xml  setup.cfg  setup.py
launch/: mock_gateway.launch.py  moveit_gateway.launch.py  ros_gateway.launch.py  rover_gateway.launch.py
scripts/: mock_smoke_test.py  run_mock_gateway.sh  start_gateway_mock.sh  start_gateway_moveit.sh  start_gateway_ros.sh  start_gateway_rover.sh
silverhand_arm_ws_gateway/: __init__.py  adapter_base.py  adapter_factory.py  config.py  main.py  mock_adapter.py  moveit_adapter.py  protocol.py  ros_adapter.py  server.py  state_cache.py
silverhand_arm_ws_gateway/core/: __init__.py  adapter_base.py  config.py  protocol.py  server.py
silverhand_arm_ws_gateway/domains/arm/: __init__.py  mock_adapter.py  moveit_adapter.py  protocol.py  ros_adapter.py  state_cache.py
silverhand_arm_ws_gateway/domains/rover/: __init__.py  mock_adapter.py  protocol.py  ros_adapter.py
silverhand_ws_gateway/domains/rover/: mock_adapter.py  ros_adapter.py
systemd/system/: silverhand-ws-gateway@.service
systemd/user/: silverhand-ws-gateway@.service
